saving intermediate models, growing obstacles curriculum learning, inference on trained policy for ros node implementation

--- a/source/isaaclab_tasks/isaaclab_tasks/direct/jetbot/try_maze.ipynb
+++ b/source/isaaclab_tasks/isaaclab_tasks/direct/jetbot/try_maze.ipynb
@@ -2,6 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "obstacles: [{'start': [-2.0, -0.6], 'end': [-2.0, 0.6]}, {'start': [2.0, -0.6], 'end': [2.0, 0.6]}, {'start': [-0.6, 2.0], 'end': [0.6, 2.0]}, {'start': [-0.6, -2.0], 'end': [0.6, -2.0]}]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import yaml\n",
+    "\n",
+    "obstacles_path = \"/home/federico/isaaclab/IsaacLab/source/isaaclab_tasks/isaaclab_tasks/direct/jetbot/obs_cfg.yaml\"\n",
+    "\n",
+    "with open(obstacles_path, 'r') as f:\n",
+    "    obstacles_cfg = yaml.safe_load(f)\n",
+    "obstacles = obstacles_cfg['maze']['walls']\n",
+    "\n",
+    "print('obstacles:', obstacles)\n",
+    "print(type(obstacles))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -487,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
