training on maze, los check, no negative distance, exploration rew

--- a/source/isaaclab_tasks/isaaclab_tasks/direct/jetbot/try_maze.ipynb
+++ b/source/isaaclab_tasks/isaaclab_tasks/direct/jetbot/try_maze.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = (1, 2, 3, 4)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
